--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
     <template id="auth-signup-template">
       <div class="form-main">
-        <form id="login-form" class="login-form" action="">
+        <form id="login-form" class="login-form signup-form" action="">
           <p class="form-title">Sign up</p>
           <label for="signup-username">Username</label>
           <input id="signup-username" type="text" placeholder="Username" required />
